5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4342/executions/1764_2390.log
== TEST (2019-05-30 15:21:56) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	mes= i +1
	i= i+1
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:22:58) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	mes= i +1
	i= i+1
print (mes)
-- EXECUTION TIME:
0.430334
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:26:03) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	mes= i +1
	i= i+1
print (max(mes))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:28:42) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	mes= i +1
	i= i+1
print (max(frequencia))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:31:23) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	mes= mes +1
	
	i= i+1
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:31:48) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	mes= mes +1
	

	i= i+1
print (mes)
-- EXECUTION TIME:
0.47019
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
12
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:36:27) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	frequencia= max(frequencia)
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:36:31) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
i= 0 
mes= 0 

while (i<12):
	frequencia= max(frequencia)
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:43:08) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(i==(max(frequencia))):
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
File "XXXX", line 12
    mes= mes + 1
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:43:19) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(i==(max(frequencia)):
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
File "XXXX", line 11
    if(i==(max(frequencia)):
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:44:45) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior)
	maior= maior+1
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
File "XXXX", line 11
    if(frequencia[i] > maior)
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:44:53) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
	
	maior= maior+1
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
File "XXXX", line 13
    maior= maior+1
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:45:06) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
	
	maior= maior + 1
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
File "XXXX", line 13
    maior= maior + 1
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:45:09) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
	
	maior= maior + 1
	mes= mes + 1
	i= i+1
	
print (mes)
-- ERROR:
File "XXXX", line 13
    maior= maior + 1
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:45:30) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
		maior = maior + 1
		mes= mes + 1
		i= i+1
	
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:46:10) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
		
		mes= mes + 1
		i= i+1
	
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:47:19) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > mes):
		
		mes= mes + 1
		i= i+1
	
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:49:29) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
		maior = frequencia[i]
		mes= i + 1
	i= i+1
	
print (mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import * 
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:50:12) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
		maior = frequencia[i]
		mes= i + 1
	i= i+1
	
print (mes)
-- EXECUTION TIME:
2.26787
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
10
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
9
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:02:03) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
		maior = maior + 1
		mes= mes + 1
		i= i+1
	
print (mes)
-- EXECUTION TIME:
966.06
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:04:03) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > maior):
		
		mes= mes + 1
		i= i+1
	
print (mes)
-- EXECUTION TIME:
1032.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 16:05:02) 
-- CODE:
from numpy import * 
presentes = array(eval(input('presentes:')))
faltosos = array(eval(input('faltosos:')))

frequencia = (presentes - faltosos)
maior= 0
i= 0 
mes= 0 

while (i<12):
	if(frequencia[i] > mes):
		
		mes= mes + 1
		i= i+1
	
print (mes)
-- EXECUTION TIME:
1042.05
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
